name:                sokoban
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/simeon979/sokoban
license:             BSD3
license-file:        LICENSE
author:              Simeon
maintainer:          adegbolasimeon@gmail.com
copyright:           2018 Simeon
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable sokoban
  hs-source-dirs:      src
  main-is:             Sokoban.hs
  other-modules:
    Sokoban.Internals.Types
    Sokoban.Input
    Sokoban.Move
    Sokoban.Parse
    
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , split
